# fast-float2-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml  steps.sh
patches/: decimal_trailing_zeros_56ac048_1.patch
src/: decimal.rs  etna.rs  lib.rs
tests/: locate.rs  test_etna.rs
