[package]
name = "fast-float"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
repository = "https://github.com/aldanor/fast-float-rust"
documentation = "https://docs.rs/fast-float"
description = "Fast floating-point number parser."
keywords = ["parser", "parsing", "parse", "float", "no-std"]
categories = ["parser-implementations", "parsing", "text-processing", "algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"
exclude = ["benches/*", "extras/*"]

[features]
default = ["std"]
std = []

[dependencies]
# ETNA benchmark runner framework dependencies (used by src/bin/etna.rs
# and the etna module). Placed in main [dependencies] so the bin target
# links against them.
proptest = "1.0"
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
quickcheck_macros = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master" }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"
rand = "0.9"

[dev-dependencies]
lexical-core = "0.7"
hexf-parse = "0.1"
ryu = "1.0"
fastrand = "1.4"
num-bigint = "0.3"
serde_json = "1.0"

[[bin]]
name = "etna-faultloc"
path = "src/bin/etna-faultloc.rs"

[workspace]
members = [".", "extras/data-tests", "extras/simple-bench"]

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
features = ["std"]
